--- a/api/templates/spotify-dark.html.j2
+++ b/api/templates/spotify-dark.html.j2
@@ -72,9 +72,9 @@
                     bottom: 1px;
                     height: 15px;
                     position: absolute;
-                    background: #5433FF;  /* fallback for old browsers */
-                    background: -webkit-linear-gradient(to right, #20BDFF, #ab66ff, #5433FF, #20BDFF);  /* Chrome 10-25, Safari 5.1-6 */
-                    background: linear-gradient(to right, #20BDFF, #ab66ff, #5433FF, #20BDFF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+                    background: #7FFF00;  /* fallback for old browsers */
+                    background: -webkit-linear-gradient(to right, #a5ff5e, #93ff3f, #7FFF00, #a5ff5e);  /* Chrome 10-25, Safari 5.1-6 */
+                    background: linear-gradient(to right, #a5ff5e, #93ff3f, #7FFF00, #a5ff5e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
                     background-size: 200% 100%;
                     background-position: 0% 50%;
                     background-attachment: fixed;
@@ -123,7 +123,7 @@
                 {{barCSS|safe}}
             </style>
 
-            <!-- <div class="currentStatus" color="white">{{status}}</div> -->
+            <div class="currentStatus" color="white">{{status}}</div>
 
             <div class="main">
                 <a class="art" href="{}" target="_blank">
