--- a/api/templates/spotify-dark.html.j2
+++ b/api/templates/spotify-dark.html.j2
@@ -18,7 +18,7 @@
                 .container {
                     border-radius: 5px;
                     padding: 10px 10px 10px 0px;
-                    background-color: #{{background_color}};
+                    background-color: #000000;
                     border: 1px solid #{{border_color}};
                 }
 
@@ -123,7 +123,7 @@
                 {{barCSS|safe}}
             </style>
 
-            <div class="currentStatus" color="white">{{status}}</div>
+            <!-–<div class="currentStatus" color="white">{{status}}</div>--!>
 
             <div class="main">
                 <a class="art" href="{}" target="_blank">
