--- a/api/templates/spotify-dark.html.j2
+++ b/api/templates/spotify-dark.html.j2
@@ -123,7 +123,7 @@
                 {{barCSS|safe}}
             </style>
 
-            <!-–<div class="currentStatus" color="white">{{status}}</div>--!>
+            <!-– <div class="currentStatus" color="white">{{status}}</div> -->
 
             <div class="main">
                 <a class="art" href="{}" target="_blank">
