--- a/api/templates/spotify-dark.html.j2
+++ b/api/templates/spotify-dark.html.j2
@@ -8,7 +8,7 @@
                 }
 
                 .currentStatus {
-                    float: left;
+                    float: center;
                     color: #f7f7f7;
                     font-size: 24px;
                     position: static;
@@ -124,7 +124,7 @@
                 {{barCSS|safe}}
             </style>
             
-            <div class="currentStatus" color="white" align="center">{{status}}</div>
+            <div class="currentStatus" color="white">{{status}}</div>
             
             <div class="main">
                 <a class="art" href="{}" target="_blank">
