--- a/api/templates/spotify-dark.html.j2
+++ b/api/templates/spotify-dark.html.j2
@@ -8,12 +8,12 @@
                 }
 
                 .currentStatus {
-                    float: center;
+                    float: float;
                     color: #f7f7f7;
                     font-size: 24px;
                     position: static;
                     margin-top: -5px;
-                    margin-left: 10px;
+                    margin-left: auto;
                 }
                 
                 .container {
