--- a/api/templates/spotify-dark.html.j2
+++ b/api/templates/spotify-dark.html.j2
@@ -8,7 +8,9 @@
                 }
 
                 .currentStatus {
-                    float: float;
+                    float: left;
+                    display: flex;
+                    justify-content: center;
                     color: #f7f7f7;
                     font-size: 24px;
                     position: static;
