--- a/api/templates/spotify-dark.html.j2
+++ b/api/templates/spotify-dark.html.j2
@@ -9,8 +9,7 @@
 
                 .currentStatus {
                     float: left;
-                    display: flex;
-                    justify-content: center;
+                    text-align: center;
                     color: #f7f7f7;
                     font-size: 24px;
                     position: static;
