--- a/api/templates/spotify-dark.html.j2
+++ b/api/templates/spotify-dark.html.j2
@@ -13,7 +13,7 @@
                     font-size: 24px;
                     position: static;
                     margin-top: -5px;
-                    margin-left: auto;
+                    margin-left: 10px;
                 }
                 
                 .container {
