--- a/api/templates/spotify-dark.html.j2
+++ b/api/templates/spotify-dark.html.j2
@@ -9,11 +9,12 @@
 
                 .currentStatus {
                     float: left;
+                    width: 100%;
+                    text-align: center;
                     color: #f7f7f7;
                     font-size: 24px;
                     position: static;
                     margin-top: -5px;
-                    margin-left: 10px;
                 }
                 
                 .container {
